k8s/mediaserver/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: mediaserver
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: ghcr.io/linuxserver/radarr
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /movies
              name: movies
            - mountPath: /downloads
              name: downloads
      volumes:
        - name: config
          nfs:
            server: 192.168.100.61
            path: /mnt/fast-pool1/docker-configs/radarr
        - name: movies
          nfs:
            server: 192.168.100.61
            path: /mnt/slow-pool/media/movies
        - name: downloads
          nfs:
            server: 192.168.100.61
            path: /mnt/slow-pool/media/torrent/downloads
