k8s/mediaserver/radarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr
  namespace: mediaserver
spec:
  rules:
    - host: "radarr.enricoruggieri.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: radarr-service
                port:
                  number: 7878
